# build-my-own-shell

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cog.toml  mise.toml  rust-toolchain.toml
.agents/skills/conventional-commits/: SKILL.md
.agents/skills/conventional-commits/agents/: openai.yaml
.agents/skills/conventional-commits/references/: cocogitto.md  pr-title-validation.md
.agents/skills/github-governance/: SKILL.md
.agents/skills/github-governance/agents/: openai.yaml
.agents/skills/github-governance/references/: branch-protection.md  releases.md  workflows.md
.agents/skills/mise-tasking/: SKILL.md
.agents/skills/mise-tasking/agents/: openai.yaml
.agents/skills/mise-tasking/references/: file-tasks.md  script-libraries.md  script-logging.md  task-conventions.md
.agents/skills/rust-tdd-project/: SKILL.md
.agents/skills/rust-tdd-project/agents/: openai.yaml
.agents/skills/rust-tdd-project/references/: codecrafters-shell.md  dependencies.md  shell-architecture.md  testing.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
mise/lib/python/mise_tasks/: __init__.py  commands.py  logging_setup.py  release.py
mise/tasks/release/: create  dry-run  package
src/: ast.rs  builtins.rs  completion.rs  env.rs  error.rs  executor.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: cli.rs
