[package]
name = "shell"
version = "0.2.0"
edition = "2021"
description = "A small Unix-like shell built test-first in Rust"
license = "MIT"
publish = false

[[bin]]
name = "shell"
path = "src/main.rs"

[lib]
name = "shell"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
